--- a/app/templates/frames/entries_table.html.j2
+++ b/app/templates/frames/entries_table.html.j2
@@ -179,13 +179,9 @@
         border-bottom-left-radius: 0px !important;
     }
 
-    /* Some hacks to make the accordions look the way I want... */
-    .accordion-button {
-        border-bottom: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
-    }
-
-    .accordion-item {
-        border-bottom: 0px;
+    #accordion-add-body, #accordion-annual-leave-body, #accordion-sick-leave-body {
+        border-top: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
+        border-bottom: 0px !important;
     }
 
     .accordion-button:not(.collapsed) {
