--- a/app/static/css/default.css
+++ b/app/static/css/default.css
@@ -64,6 +64,22 @@ a.icon {
     background-color: #e9ecef;
 }
 
+/* Border radius fixes */
+/* This might be a little flaky */
+/* Flatpickr hides the element it mounts and inserts the real picker after it  */
+/* Most of the time if we have a flatpickr in an input-group it's the first item */
+/* So should have a border radius */
+.input-group > :first-child,
+.input-group > .flatpickr {
+    border-top-left-radius: var(--bs-border-radius) !important;
+    border-bottom-left-radius: var(--bs-border-radius) !important;
+}
+
+.input-group > *:last-child {
+    border-top-right-radius: var(--bs-border-radius) !important;
+    border-bottom-right-radius: var(--bs-border-radius) !important;
+}
+
 /* Debug bar */
 .debug-bar {
     width: 100vw;
