--- a/app/templates/frames/entries_table.html.j2
+++ b/app/templates/frames/entries_table.html.j2
@@ -177,6 +177,13 @@
     #showAnnualLeaveForm {
         border-top-left-radius: 0px !important;
         border-bottom-left-radius: 0px !important;
+        border-top-right-radius: 0px !important;
+        border-bottom-right-radius: 0px !important;
+    }
+
+    #showSickLeaveForm {
+        border-top-left-radius: 0px !important;
+        border-bottom-left-radius: 0px !important;
     }
 
     #accordion-add-body, #accordion-annual-leave-body, #accordion-sick-leave-body {
