--- a/bootstrap/custom.scss
+++ b/bootstrap/custom.scss
@@ -1,5 +1,8 @@
+// Colors
 $primary: #235789;
 $danger: #C20114;
+
+// Border Radii
 $border-radius: 0.5rem;
 
 @import "./node_modules/bootstrap/scss/bootstrap";
