--- a/app/static/css/default.css
+++ b/app/static/css/default.css
@@ -69,13 +69,13 @@ a.icon {
 /* Flatpickr hides the element it mounts and inserts the real picker after it  */
 /* Most of the time if we have a flatpickr in an input-group it's the first item */
 /* So should have a border radius */
-.input-group > :first-child,
+.input-group > :first-child:not(input[type="checkbox"]),
 .input-group > .flatpickr {
     border-top-left-radius: var(--bs-border-radius) !important;
     border-bottom-left-radius: var(--bs-border-radius) !important;
 }
 
-.input-group > *:last-child {
+.input-group > *:last-child:not(input[type="checkbox"]) {
     border-top-right-radius: var(--bs-border-radius) !important;
     border-bottom-right-radius: var(--bs-border-radius) !important;
 }
