--- a/app/templates/frames/settings/general.html.j2
+++ b/app/templates/frames/settings/general.html.j2
@@ -1,4 +1,4 @@
-<form method="post" action="/settings">
+<form method="post" action="/settings" with-validation>
     <div class="mb-3">
         <div class="mb-2">
             <label class="form-label">Time Zone</label>
