--- a/app/templates/pages/settings.html.j2
+++ b/app/templates/pages/settings.html.j2
@@ -19,8 +19,10 @@ The settings pages extend this and specify their content in a `content` block
                     <a class="nav-link{% if page == 'account' %} active{% endif %}"
                         href="/settings/account">Account</a>
 
-                    <a class="nav-link{% if page == 'admin' %} active{% endif %}"
-                        href="/settings/admin">Admin</a>
+                    {% if is_admin %}
+                        <a class="nav-link{% if page == 'admin' %} active{% endif %}"
+                            href="/settings/admin">Admin</a>
+                    {% endif %}
                 </nav>
             </dynamic-frame-router>
         </div>
