--- a/app/templates/frames/settings/teams.html.j2
+++ b/app/templates/frames/settings/teams.html.j2
@@ -1,10 +1,8 @@
-<div class="d-flex justify-content-between">
-    {# Breadcrumbs #}
+<div id="breadcrumbs">
     <h3>Teams</h3>
 
     <div>
         <a role="button" class="btn btn-primary" href="/settings/teams/add">Add Team</a>
-        <a role="button" class="btn btn-secondary" href="/settings/teams/invite">Invite User</a>
     </div>
 </div>
 
