--- a/app/templates/frames/settings/team.html.j2
+++ b/app/templates/frames/settings/team.html.j2
@@ -1,14 +1,14 @@
-<div class="d-flex justify-content-between">
-    {% set bc_teams = "<a href='/settings/teams'>Teams</a>" %}
+<div id="breadcrumbs">
+    {% set teams_url = "<a href='/settings/teams'>Teams</a>" %}
 
-    <h3>{{ bc_teams }} / {{ team }}</h3>
+    <h3>{{ teams_url }} / {{ team }}</h3>
 
     <div>
-        <a role="button" class="btn btn-secondary" href="/settings/teams/invite">Invite User</a>
+        <a role="button" class="btn btn-primary" href="/settings/teams/invite">Invite User</a>
     </div>
 </div>
 
-<section name="users" class="mt-3">
+<section name="users">
     <h5>Users</h5>
     {% set users = ["user-a", "user-b", "user-c"] %}
     {% for user in users %}
@@ -16,23 +16,6 @@
             <a href="/settings/teams/{{ team }}/user/{{ user }}">{{ user }}</a>
         </div>
     {% endfor %}
-</section>
-
-<section name="settings" class="mt-5">
-    <h5>Settings</h5>
-    <form>
-        <div class="mb-2">
-            <label class="form-label">Approvers</label>
-            <input class="form-control"
-                type="text"
-                name="leaveEntitelement"
-                id="leaveEntitlement"
-                value="25"
-                required/>
-        </div>
-
-        <button class="btn btn-primary">Save</button>
-    </form>
 </section>
 
 <frame-meta data-name="{{ page }}" />
