--- a/app/static/css/default.css
+++ b/app/static/css/default.css
@@ -70,6 +70,14 @@ a.icon {
     background-color: #e9ecef;
 }
 
+.form-label {
+    margin-bottom: 0.1rem;
+}
+
+.form-text {
+    margin-top: 0.1rem;
+}
+
 /* Border radius fixes */
 /* This might be a little flaky */
 /* Flatpickr hides the element it mounts and inserts the real picker after it  */
