--- a/config/app_config.py.tmpl
+++ b/config/app_config.py.tmpl
@@ -3,3 +3,5 @@ SENDGRID_API_KEY = ""
 CACHE_HOST = ""
 HOST = "http://localhost:4000"
 FROM_EMAIL = ""
+ROLLBAR_SERVER_TOKEN = ""
+ROLLBAR_CLIENT_TOKEN = ""
