--- a/config/app_config.py.tmpl
+++ b/config/app_config.py.tmpl
@@ -5,3 +5,5 @@ HOST = "http://localhost:4000"
 FROM_EMAIL = ""
 ROLLBAR_SERVER_TOKEN = ""
 ROLLBAR_CLIENT_TOKEN = ""
+SLACK_CLIENT_ID = ""
+SLACK_CLIENT_SECRET = ""
