--- a/app/static/css/default.css
+++ b/app/static/css/default.css
@@ -1,3 +1,8 @@
+/* Always show scroll bar to prevent layout shift */
+html {
+    overflow-y: scroll;
+}
+
 /* Core styles */
 #header a {
     text-decoration: none;
