Finish slack auth

--- a/app/templates/frames/settings/slack_config.html.j2
+++ b/app/templates/frames/settings/slack_config.html.j2
@@ -1,1 +1,5 @@
 <p>Hello, Slack Config!</p>
+
+<form method="post" action="/settings/slack">
+    <button class="btn btn-danger" name="action" value="disconnect">Disconnect Slack</button>
+</form>
