Update slack status when starting/ending breaks

--- a/app/templates/frames/settings/account.html.j2
+++ b/app/templates/frames/settings/account.html.j2
@@ -1,5 +1,7 @@
 {% import "macros/bootstrap.html.j2" as bs %}
 
+<h3>Account Settings</h3>
+
 <form method="post" action="/settings/account">
     <div class="mb-3">
         <div class="mb-2">
