--- a/app/templates/frames/settings/general.html.j2
+++ b/app/templates/frames/settings/general.html.j2
@@ -1,3 +1,5 @@
+<h3>General Settings</h3>
+
 <form method="post" action="/settings" with-validation>
     <div class="mb-3">
         <div class="mb-2">
