--- a/app/templates/frames/settings/slack_config.html.j2
+++ b/app/templates/frames/settings/slack_config.html.j2
@@ -8,19 +8,32 @@
         <label class="form-check-label" for="auto_update_slack_status">Auto update Slack status when starting and ending breaks</label>
     </div>
 
-
     <div class="d-flex justify-content-between mt-3">
         <button class="btn btn-primary" name="submit" value="save" type="submit">Save</button>
-
-        <button class="btn btn-danger"
-                id="delete-account"
-                type="button"
-                data-bs-toggle="modal"
-                data-bs-target="#disconnectSlackModal">
-            Disconnect Slack
-        </button>
     </div>
 </form>
+
+<div class="mt-5">
+    <h4>Connected Slack accounts</h4>
+
+    <ul class="list-group list-group-flush">
+        {% for token in slack_tokens %}
+            <li class="list-group-item">
+                <div class="d-flex flex-column align-items-start pb-2">
+                    <p>{{ token.team_name }}</p><br />
+                    <button class="btn btn-link p-0"
+                            id="delete-account"
+                            type="button"
+                            data-slack-token-id="{{ token.id }}"
+                            data-bs-toggle="modal"
+                            data-bs-target="#disconnectSlackModal">
+                        Disconnect
+                    </button>
+                </div>
+            </li>
+        {% endfor %}
+    </ul>
+</div>
 
 {# Disconnect slack modal #}
 {% call bs.modal("disconnectSlackModal", "Disconnect Slack Account") %}
@@ -43,6 +56,8 @@
             const formData = new FormData(form);
             formData.append("submit", "disconnect-slack");
 
+            // TODO: Send token ID to server and delete by ID
+            // Probably want to change redirect and flash message too
             const res = await fetch(form.action, {
                 method: form.method,
                 body: formData,
