--- a/app/templates/frames/settings/slack_config.html.j2
+++ b/app/templates/frames/settings/slack_config.html.j2
@@ -14,7 +14,7 @@
 </form>
 
 <div class="mt-5">
-    <h4>Connected Slack accounts</h4>
+    <h4>Connected Slack Accounts</h4>
 
     <ul class="list-group list-group-flush">
         {% for token in slack_tokens %}
