Stop hardcoding slack client ID

--- a/app/templates/frames/settings/slack_config.html.j2
+++ b/app/templates/frames/settings/slack_config.html.j2
@@ -36,7 +36,7 @@
 
         {# Button to add another account #}
         <li class="list-group-item">
-            <a href="https://slack.com/oauth/v2/authorize?scope=&amp;user_scope=users%3Awrite%2Cusers.profile%3Awrite&amp;redirect_uri={{ callback_url }}&amp;client_id=7752107603456.7722697346342">Add another Slack account</a>
+            <a href="https://slack.com/oauth/v2/authorize?scope=&amp;user_scope=users%3Awrite%2Cusers.profile%3Awrite&amp;redirect_uri={{ callback_url }}&amp;client_id={{ slack_client_id }}">Add another Slack account</a>
         </li>
     </ul>
 </div>
