MakAllow breaks over different dates

--- a/app/templates/frames/time_form.html.j2
+++ b/app/templates/frames/time_form.html.j2
@@ -62,7 +62,7 @@
                             <input class="flatpickr break"
                                 type="text"
                                 name="break-end-{{ break.id }}"
-                                data-date-type="time"
+                                data-date-type="datetime"
                                 data-date-value="{{ break_end }}"/>
 
                             <span class="badge bg-secondary">{{ break.duration }}</span>
