--- a/app/templates/frames/settings/account.html.j2
+++ b/app/templates/frames/settings/account.html.j2
@@ -89,7 +89,7 @@
             if (res.type === "opaqueredirect") {
                 window.location.href = res.url;
             } else {
-                flash("Something went wrong, please contact us", "danger");
+                flash("Something went wrong, please contact us.", "danger");
             }
         });
     })();
