--- a/app/templates/frames/settings/general.html.j2
+++ b/app/templates/frames/settings/general.html.j2
@@ -17,8 +17,7 @@
             <select class="form-select"
                     name="holiday_location"
                     id="holiday_location"
-                    value="{{ settings.holiday_location }}"
-                    required>
+                    value="{{ settings.holiday_location }}">
 
                 {# TODO: Add more locations #}
                 {% set locations = {
