--- a/app/templates/frames/settings/slack_config.html.j2
+++ b/app/templates/frames/settings/slack_config.html.j2
@@ -79,7 +79,7 @@
                 }
             } catch (e) {
                 console.error(e);
-                flash("Something went wrong, please contact us", "danger");
+                flash("Something went wrong, please contact us.", "danger");
             }
         });
     })();
