--- a/app/templates/frames/time_form.html.j2
+++ b/app/templates/frames/time_form.html.j2
@@ -125,7 +125,7 @@
                 if (response.ok) {
                     frame.emit("time:changed");
                 } else {
-                    flash("Failed to add time record", "danger");
+                    flash("Failed to add time record.", "danger");
                     console.error(`Failed to add time record: ${await response.text()}`)
                 }
             });
@@ -139,7 +139,7 @@
                 if (response.status == 200) {
                     frame.emit("time:changed");
                 } else {
-                    flash("Failed to delete time record", "danger");
+                    flash("Failed to delete time record.", "danger");
                     console.error(`Failed to delete time record ${id}: ${await response.text()}`)
                 }
             });
