--- a/app/templates/frames/time_stats.html.j2
+++ b/app/templates/frames/time_stats.html.j2
@@ -1,6 +1,6 @@
 <section id="stats" class="row">
     <div class="col-md-4 mb-2">
-        <div class="card border-dark">
+        <div class="card border">
             <div class="card-body">
                 <h4 class="card-title">Time Logged</h4>
                 <div class="d-flex justify-content-between">
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="col-md-4 mb-2">
-        <div class="card border-dark">
+        <div class="card border">
             <div class="card-body">
                 <h4 class="card-title">Scheduled Time Left</h4>
                 <div class="d-flex justify-content-between">
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="col-md-4 mb-2">
-        <div class="card border-dark" style="height: 100%">
+        <div class="card border" style="height: 100%">
             <div class="card-body">
                 <h4 class="card-title">Overtime</h4>
                 <h6 class="card-subtitle mb-1 mt-1 text-muted">&nbsp;</h6>
