--- a/app/templates/layouts/wrapper.html.j2
+++ b/app/templates/layouts/wrapper.html.j2
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="{{ theme }}">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -27,6 +27,7 @@
 
         <!-- Our CSS and js -->
         <link rel="stylesheet" href="/static/css/default.css" />
+        <link rel="stylesheet" href="/static/css/themes/{{ theme }}.css" />
         <script type="module" defer src="/static/js/main.js"></script>
 
         <script type="module">
