--- a/app/templates/pages/settings.html.j2
+++ b/app/templates/pages/settings.html.j2
@@ -24,6 +24,8 @@ The settings pages extend this and specify their content in a `content` block
                     {% if is_admin %}
                         <a class="nav-link{% if page == 'admin' %} active{% endif %}"
                             href="/settings/admin">Admin</a>
+                        <a class="nav-link{% if page == 'users' %} active{% endif %}"
+                            href="/settings/users">Users</a>
                     {% endif %}
                 </nav>
             </dynamic-frame-router>
