--- a/app/templates/layouts/wrapper.html.j2
+++ b/app/templates/layouts/wrapper.html.j2
@@ -23,6 +23,7 @@
         {# djlint:off #}
         {% include "partials/assets/bootstrap.html.j2" %}
         {% include "partials/assets/flatpickr.html.j2" %}
+        {% include "partials/assets/tomselect.html.j2" %}
         {# djlint:on #}
 
         <!-- Our CSS and js -->
